--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Practical Machine Learning Course Project"
 author: "Khanjan Damania"
-date: "June 15, 2016"
+date: "June 19, 2016"
 output: html_document
 ---
 
@@ -9,14 +9,16 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Background and Introduction
+##Backgound and Introduction
 
 Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self-movement - a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, we will use data recorded from accelerometers on the belt, forearm, arm, and dumbbell of 6 participants. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available from the website http://groupware.les.inf.puc-rio.br/har (see the section on the Weight Lifting Exercise Dataset).
+
 The goal of this project is to predict the manner in which the participants did the exercise. This is the classe variable of the training set, which classifies the correct and incorrect outcomes into A, B, C, D, and E categories. This report describes how the model for the project was built, its cross validation, expected out of sample error calculation, and the choices made. It was used successfully to accurately predict all 20 different test cases on the Coursera website.
+
 This document is the write-up submission for the course Practical Machine Learning. This 4-week course was offered on Coursera in June 2016, and is part of Johns Hopkins Data Science Specialization.
 
 
-## Data Description
+##Data Description
 
 The training data for this project are available here:
 https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv
@@ -25,3 +27,135 @@ The test data are available here:
 https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv
 
 The data for this project come from this source: http://groupware.les.inf.puc-rio.br/har. If you use the document you create for this class for any purpose please cite them as they have been very generous in allowing their data to be used for this kind of assignment.
+
+
+##Libraries Used
+
+The following libraries were used for this project, which should be installed and loaded on the working environment.
+```{r}
+library(caret)
+library(rpart)
+library(rpart.plot)
+library(RColorBrewer)
+library(rattle)
+library(randomForest)
+```
+
+Set the seed
+```{r}
+set.seed(12345)
+```
+
+##Data Gathering
+Load in the training dataset from the link into trainingData variable
+```{r}
+trainingData <- read.csv(url("http://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv"), na.strings=c("NA","#DIV/0!",""))
+```
+
+Load in the testing dataset from the link into testingData variable
+```{r}
+testingData <- read.csv(url("http://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv"), na.strings=c("NA","#DIV/0!",""))
+```
+
+Partioning Training data set into two data sets, 70% for dataTraining, 30% for dataValidating:
+```{r}
+inTraining <- createDataPartition(y=trainingData$classe, p=0.70, list=FALSE)
+dataTraining <- trainingData[inTraining, ]; dataValidating <- trainingData[-inTraining, ]
+dim(dataTraining); dim(dataValidating)
+```
+
+##Data Cleaning
+Transformation 1: Cleaning NearZeroVariance Variables Run to view possible NZV Variables:
+```{r}
+dataNZV <- nearZeroVar(dataTraining, saveMetrics=TRUE)
+```
+
+Creating another subset without NZV variables:
+```{r}
+dataNZVvars <- names(dataTraining) %in% c("new_window", "kurtosis_roll_belt", "kurtosis_picth_belt", "kurtosis_yaw_belt", "skewness_roll_belt", "skewness_roll_belt.1", "skewness_yaw_belt", "max_yaw_belt", "min_yaw_belt", "amplitude_yaw_belt", "avg_roll_arm", "stddev_roll_arm", "var_roll_arm", "avg_pitch_arm", "stddev_pitch_arm", "var_pitch_arm", "avg_yaw_arm", "stddev_yaw_arm", "var_yaw_arm", "kurtosis_roll_arm", "kurtosis_picth_arm", "kurtosis_yaw_arm", "skewness_roll_arm", "skewness_pitch_arm", "skewness_yaw_arm", "max_roll_arm", "min_roll_arm", "min_pitch_arm", "amplitude_roll_arm", "amplitude_pitch_arm", "kurtosis_roll_dumbbell", "kurtosis_picth_dumbbell", "kurtosis_yaw_dumbbell", "skewness_roll_dumbbell", "skewness_pitch_dumbbell", "skewness_yaw_dumbbell", "max_yaw_dumbbell", "min_yaw_dumbbell", "amplitude_yaw_dumbbell", "kurtosis_roll_forearm", "kurtosis_picth_forearm", "kurtosis_yaw_forearm", "skewness_roll_forearm", "skewness_pitch_forearm", "skewness_yaw_forearm", "max_roll_forearm", "max_yaw_forearm", "min_roll_forearm", "min_yaw_forearm", "amplitude_roll_forearm", "amplitude_yaw_forearm", "avg_roll_forearm", "stddev_roll_forearm", "var_roll_forearm", "avg_pitch_forearm", "stddev_pitch_forearm", "var_pitch_forearm", "avg_yaw_forearm", "stddev_yaw_forearm", "var_yaw_forearm")
+dataTraining <- dataTraining[!dataNZVvars]
+dim(dataTraining)
+```
+
+Transformation 2: Killing first column of Dataset - ID Removing first ID variable so that it does not interfer with ML Algorithms:
+```{r}
+dataTraining <- dataTraining[c(-1)]
+```
+
+Transformation 3: Cleaning Variables with too many NAs. For Variables that have more than a 70% threshold of NA’s I’m going to leave them out:
+```{r}
+trainingSubs <- dataTraining #creating another subset to iterate in loop
+for(i in 1:length(dataTraining)) { #for every column in the training dataset
+  if( sum( is.na( dataTraining[, i] ) ) /nrow(dataTraining) >= .7 ) { #if n?? NAs > 60% of total observations
+    for(j in 1:length(trainingSubs)) {
+      if( length( grep(names(dataTraining[i]), names(trainingSubs)[j]) ) ==1)  { #if the columns are the same:
+        trainingSubs <- trainingSubs[ , -j] #Remove that column
+      }   
+    } 
+  }
+}
+
+dim(trainingSubs)
+```
+
+Loading it back to our training data
+```{r}
+dataTraining <- trainingSubs
+rm(trainingSubs)
+```
+
+Performing the exact same 3 transformations for dataValidating and testinData.
+```{r}
+clean <- colnames(dataTraining)
+clean1 <- colnames(dataTraining[, -58]) #already with classe column removed
+dataValidating <- dataValidating[clean]
+testingData <- testingData[clean1]
+dim(dataValidating)
+dim(testingData)
+```
+
+In order to ensure proper functioning of Decision Trees and especially RandomForest Algorithm with the Test data set (data set provided), data is coerced into the same type.
+```{r}
+for (i in 1:length(testingData) ) {
+  for(j in 1:length(dataTraining)) {
+    if( length( grep(names(dataTraining[i]), names(testingData)[j]) ) ==1)  {
+      class(testingData[j]) <- class(dataTraining[i])
+    }      
+  }      
+}
+
+testingData <- rbind(dataTraining[2, -58] , testingData)
+testingData <- testingData[-1,]
+```
+
+##ML Algorithm 1: Decision Tree
+```{r}
+modelFitA1 <- rpart(classe ~ ., data=dataTraining, method="class")
+fancyRpartPlot(modelFitA1)
+predictionsA1 <- predict(modelFitA1, dataValidating, type = "class")
+confusionMatrix(predictionsA1, dataValidating$classe)
+```
+
+##ML Algorithm 1: Random Forests
+```{r}
+modelFitB1 <- randomForest(classe ~. , data=dataTraining)
+predictionsB1 <- predict(modelFitB1, dataValidating, type = "class")
+confusionMatrix(predictionsB1, dataValidating$classe)
+```
+
+##Prediction on the Testing dataset
+```{r}
+predictionsB2 <- predict(modelFitB1, testingData, type = "class")
+```
+
+##Generating answers for Course Project Prediction Quiz
+```{r}
+pml_write_files = function(x){
+  n = length(x)
+  for(i in 1:n){
+    filename = paste0("problem_id_",i,".txt")
+    write.table(x[i],file=filename,quote=FALSE,row.names=FALSE,col.names=FALSE)
+  }
+}
+pml_write_files(predictionsB2)
+```
